--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ repository: neulionweb/neulionweb.github.io
 github_url: https://github.com/neulionweb
 url: https://neulionweb.dev
 cdn_prefix: /
+#cdn_prefix: https://cdn.jsdelivr.net/gh/neulionweb/neulionweb.github.io@master/
 enforce_ssl: neulionweb.dev
 port: 4000
 host: localhost
@@ -167,7 +168,7 @@ comments_provider: gitalk
 # https://github.com/gitalk/gitalk#install
 gitalk:
     owner: neulionweb
-    admin: ['neulionweb','helloint']
+    admin: helloint
     repo: blog-comments
     clientID: bd19f585d4e20d3aaa60
     clientSecret: 27b511d7f82d3f6984ebbbd8b80718cd7b2282c4
