--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,3 +2,7 @@ helloint:
   name: Wayne Mao
   avatar: https://avatars.githubusercontent.com/u/4143533
   github: helloint
+cammytang:
+  name: Cammy Tang
+  avatar: https://avatars.githubusercontent.com/u/30916378
+  github: cammytang
